[package]
name = "aerogel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.2.0"
futures = "0.3"
scoped-tls = "1"
parking_lot = { version = "0.12.1" }
crossbeam-epoch = "0.9.15"
crossbeam-utils = "0.8.16"
crossbeam-deque = "0.8"